# RuView

./: CHANGELOG.md
.github/workflows/: ci.yml  nvsim-server-docker.yml  sensing-server-docker.yml
aether-arena/space/: requirements.txt
docs/research/sota-2026-05-22/: PROGRESS.md
examples/research-sota/: r8_rssi_only_count.py  r8_rssi_only_results.json
firmware/esp32-csi-node/main/: adaptive_controller.c  csi_collector.c  rv_feature_state.h  rv_mesh.c  stream_sender.c  stream_sender.h  wasm_runtime.h
nvsim/: index.html  manifest.webmanifest  registerSW.js  sw.js  sw.js.map  workbox-8c29f6e4.js.map
nvsim/assets/: index-Bxroo-9X.js  index-Bxroo-9X.js.map  index-CeVBckHr.css  lit-BS7WqYd5.js  lit-BS7WqYd5.js.map  signals-SG45zFCj.js  signals-SG45zFCj.js.map  worker-C19MRcXs.js  worker-C19MRcXs.js.map
pointcloud/: README.md  index.html
v2/: Cargo.toml
v2/crates/homecore-plugins/src/: manifest.rs
v2/crates/wifi-densepose-bfld/tests/: soul_match.rs
v2/crates/wifi-densepose-sensing-server/src/: csi.rs  engine_bridge.rs  main.rs  multistatic_bridge.rs
v2/crates/wifi-densepose-signal/src/: bvp.rs  csi_processor.rs  hardware_norm.rs  spectrogram.rs
v2/crates/wifi-densepose-signal/src/ruvsense/: adversarial.rs  calibration.rs  cir.rs  multistatic.rs
v2/crates/wifi-densepose-train/src/: dataset.rs  error.rs
v2/crates/wifi-densepose-worldgraph/: Cargo.toml
v2/crates/wifi-densepose-worldgraph/src/: error.rs  graph.rs  lib.rs  model.rs
